--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,40 @@ Dark green: #28b485
 */
 
 /* the universal selector * selects each and every element on a page and applies the declarations*/
-* {
+
+/* BOX-MODEL */
+/* In the box-model, an element with a specified width of 300px, a padding of 20px and border of 5px will have a total displayed with of 350px */
+/* this is because padding left of 20px, right of 20px and border left and right of 5px are added to the specified width */
+/* however, this isn't that practical */
+/* to fix this we can add box-sizing: border-box; to the universal selector */
+/* this changes our specified width and height to include the padding and border */
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* by default browsers apply a certain margin and padding by default - first step is to remove them, removing the padding/margin enables us to start clean */
-/* changes the box model so the borders and paddings are no longer added to the total height or width that we specify for a box */
-
+/* CHANGE ONE SINGLE VALUE TO SCALE UP OR DOWN SIZES OF ALL ELEMENTS RESPONSIVELY */
+/* root font-size is set in the html selector*/
+/* change this 10px so now 1 rem is exactly 10px. makes it easier to convert absolute measurements to rem, by dividing px measurements by 10*/
+/* Now, we can change this one single, and each and every rem value will be scaled up or down depending on this font-size */
+/* this enables us to easily scale up or down the sizes of all elements by only changing one value*/
+/* meaning we can more easily create responsive css*/
+html {
+  font-size: 62.5%;
+}
+/* however, if we change the default font-size using px we remove the option for users to set their own font-size when viewing our page*/
+/* if we put 100% here, this means the root font size is 16px if the user doesn't change the default font-size */
+/* 10 is 62.5% of 16 so to set it back to 16px in % we make the font-size 62.5%*/
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.7; /* 1.7 times bigger than the default line height */
   color: #777;
-  padding: 30px;
+  padding: 3rem;
 }
 
 .header {
@@ -39,31 +57,17 @@ body {
   position: relative;
 }
 
-/* to right, makes the linear gradient go from left top to right bottom corner */
-/* hover over the colours to use the colour picker - there you can choose an opacity for your overlay colours*/
-/* here we're giving our background img a coloured overlay - here we have two background images, one on top of the other */
-/* fits the background img inside the width of the viewport */
-/* ensures that the top of the image always stays at the top of the viewport */
-
-/* CLIP- PATH */
-/* with clip-path we can clip an image by defining the coordinates of a polygon that we want to be visible*/
-/* start in the top left corner and move clockwise */
-/* clip-path: polygon(x y, x y, x y, x y); these coordinates are all relative to the top right hander corner of the element. x is across, y is down.*/
-/* https://bennettfeely.com/clippy/ : this tool autogenerates the coordinates for you based on the shape you want*/
-
-.logo-box {
+.header__logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
 }
 
-/* we set the parent element (header) to position: realtive, and now top and left are relative to the top and left of the parent container with a position of relative */
-
-.logo {
-  height: 35px;
+.header__logo {
+  height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
   text-align: center;
   position: absolute;
   top: 40%;
@@ -71,36 +75,25 @@ body {
   transform: translate(-50%, -50%);
 }
 
-/* TRANSFORM */
-/* using position: absolute, top: 50% and left: 50% pushes whatever's inside the box 50% from the top and left of the parent*/
-/* however in order to center the child relative to the parent we need the CENTER of the element pushed 50% from the top and left of its parent, NOT the outer edges*/
-/* transform: translate(x, y) allows us to do this */
-/* specify translate -50% on x and y, this changes the point from where the child is pushed to be the center of the child rather than its outer edges  */
-
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
   animation: moveInLeft 1s ease-in;
-  /* animation-name: moveInLeft */
-  /* animation-duration: 1s; */
-  /* animation-timing-function: ease-in; -- these properties can be written in the above shorthand */
-  /* animation-delay: 3s; */
-  /* animation-iteration-count: 3 */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.75rem;
   animation: moveInRight 1s ease-in;
 }
 
@@ -132,20 +125,17 @@ body {
   }
 }
 
-/* 0% initial state, 100% final state*/
-/* change opacity from 0 to 1 (fadeIn) */
-/* move the element in the x direction (left to right)*/
-
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: all 0.5s;
   position: relative;
   animation: moveInLeft 1s ease-in;
+  font-size: 1.6rem;
 }
 
 .btn:hover {
@@ -158,15 +148,7 @@ body {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* PSEUDOCLASSES */
-/* we use pseudoclasses to style an element under a certain condition*/
-/* link pseudoclass applies to links */
-/* visited is the state where the user has already clicked on the link before and sees it again*/
-/* here we're keeping the styles for link and visited states the same*/
-/* when we click an element, this is called the 'active' state, here the -1px is relative to the link state, not to the hover  */
-/* transition property enables us to specify simple animations */
-
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -176,7 +158,7 @@ body {
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -184,7 +166,7 @@ body {
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -192,12 +174,3 @@ body {
   transform: scaleX(2) scaleY(1.5);
   opacity: 0;
 }
-
-/* PSEUDO-ELEMENTS - ::before and ::after*/
-
-/* pseudo-elements can be inserted (spatially) ::before or ::after a particular element */
-/* a pseudo-element is basically an element you can have, without having to include it in your markup */
-/* in this case we created a pseudo-element as it's there purely for animation effect (to increase in size and fadeout on hover, creating a splash effect)*/
-/* to use: */
-/* have to specify content and display properties first, even if they're empty*/
-/* after is treated like a child of the .btn element, so 100% h and w is the height and width of the button */
