--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@ Dark green: #28b485
 $color-primary-light: #7ed56f;
 $color-primary: #55c57a;
 $color-primary-dark: #28b485;
+$color-grey-dark: #777;
+$color-white: #fff;
 
 *,
 *::after,
@@ -30,7 +32,7 @@ body {
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7; /* 1.7 times bigger than the default line height */
-  color: #777;
+  color: $color-grey-dark;
   padding: 3rem;
 }
 
@@ -67,7 +69,7 @@ body {
 }
 
 .heading-primary {
-  color: #fff;
+  color: $color-white;
   text-transform: uppercase;
   margin-bottom: 6rem;
 }
@@ -140,8 +142,8 @@ body {
 }
 
 .btn--white {
-  background-color: #fff;
-  color: #777;
+  background-color: $color-white;
+  color: $color-grey-dark;
 }
 
 .btn::after {
@@ -158,7 +160,7 @@ body {
 }
 
 .btn--white::after {
-  background-color: #fff;
+  background-color: $color-white;
 }
 
 .btn:hover::after {
