--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -27,3 +27,30 @@ body {
     animation: moveInRight 1s ease-in;
   }
 }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  -webkit-background-clip: text;
+  color: transparent;
+
+  letter-spacing: 2px;
+  transition: all 0.2s;
+  &:hover {
+    transform: skewY(5deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
+}
+
+// CREATE COLOR GRADIENT FOR TEXT COLOR
+// first set background image to linear gradient to set the gradient color
+// then change display to inline-block so the background only occupies the width of the text and not the whole viewport
+// the background gets clipped exactly where the text is
+// finally change text color to transparent
