Adding content to About Section. added h3s, ps and button in left column, and imgs in right column. stacked imgs on top of one another using absolute positioning and added animations, where the hovered img gets bigger and the non-hovered imgs get smaller. Location: Sass > components > _composition.scss

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -54,3 +54,16 @@ body {
 // then change display to inline-block so the background only occupies the width of the text and not the whole viewport
 // the background gets clipped exactly where the text is
 // finally change text color to transparent
+
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: $default-font-size;
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
