--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,22 +1,25 @@
 .card {
+  // FUNCTIONALITY
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
+  height: 52rem;
 
   &__side {
-    height: 50rem;
-    transition: all 0.8s ease;
+    height: 52rem;
+    transition: all 2s ease;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     backface-visibility: hidden;
     border-radius: 3px;
+    overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
     &--front {
       &-1 {
-        background-color: yellow;
+        background-color: $color-white;
       }
     }
 
@@ -33,18 +36,83 @@
     }
   }
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
   &:hover &__side--back {
     transform: rotateY(0deg);
   }
+
+  // FRONT-SIDE STYLING
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: color;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    &--1 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-secondary-dark
+        ),
+        url(../img/nat-5.jpg);
+    }
+    &--2 {
+      background-image: url(../img/nat-5.jpg);
+    }
+    &--3 {
+      background-image: url(../img/nat-5.jpg);
+    }
+  }
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 65%;
+  }
+
+  &__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.8),
+        rgba($color-secondary-dark, 0.8)
+      );
+    }
+  }
+
+  &__details {
+    padding: 3rem;
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto;
+
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $color-grey-light-2;
+        }
+      }
+    }
+  }
 }
 
-// ROTATING CARDS
-// cards to rotate 180deg across the y axis on hover
-// use transform property to rotate 180 deg on hover, then transition as above to make the animation smooth
-// we define perspective on the parent so that the card looks like it's coming out of the screen when rotating
-// to do this we need to add children to the card elements, called "card__side"
-// (lower numbers on perspective property create more dramatic/exaggerated effect)
-// we want the back side to start at 180deg rotation, and move towards 0deg on hover - so we set the starting value of the back side to 180deg rotatation
-// and then rotate the front and back sides accordingly so they are rotating on opposite ways
+// CARD STYLES
+// background blend allows you to blend a background image and a background color in various different ways
+// this is a new feature and could previously only be done using an image editor like photoshop
+
+// position: absolute on the heading allows it to overlay the image
+
+// we wrap the text content of the h4 inside a span element, then add background gradient to the span
