--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -11,7 +11,7 @@
   margin-bottom: 8rem;
 }
 
-.u-margin-bottom-small {
+.u-margin-bottom-medium {
   margin-bottom: 4rem;
 }
 
@@ -24,7 +24,7 @@
   margin-top: 8rem;
 }
 
-.u-margin-top-small {
+.u-margin-top-medium {
   margin-top: 4rem;
 }
 
