--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -31,3 +31,39 @@
   padding: 15rem 0;
   position: relative;
 }
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light,
+    $color-primary-dark
+  );
+}
+
+.book {
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../img/nat-10.jpg);
+  background-size: cover;
+  border-radius: 3px;
+  box-shadow: 0 1.5 4rem rgba($color-black, 0.15);
+  height: 50rem;
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
+}
+
+// SOLID COLOUR GRADIENT
+// with the background gradient on the book element
+// we are specifying the transition to be:
+// white at 0%, and white at 50%
+// then transparent at 50%
+// this creates a sharp transition where one color ends and another immediately begins.
+// this technique is useful for creating shaped colour overlays on elements.
