--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
 
 @import "components/btn";
 @import "components/composition";
