importance of order of the media queries explained in _base.scss. Specified the order in which I will write the media queries in _mixins.scss - for a more structure approach. Changing the grid system at the tablet-portrait size (width 900px and less), setting all columns to 100% at this breakpoint. Adding padding left and right to the row at this breakpoint. Have also made some small positioning changes. Locations: _base.scss, _mixins.scss, _typography.scss, _grid.scss

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -33,6 +33,8 @@ $breakpoint argument choices:
 - tab-land
 - big-desktop
 
+ORDER: base + typography > general layout + grid > page layout > components
+
 1em == 16px
 Using ems in media queries rather than pixels allows the user to define their own font-size, which we want them to be able to do
 */
