--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,6 +5,11 @@ body {
   line-height: 1.7; /* 1.7 times bigger than the default line height */
   color: $color-grey-dark;
   padding: 3rem;
+
+  @include respond(tab-port) {
+    // width < 900?
+    padding: 0;
+  }
 }
 
 .heading-primary {
@@ -18,6 +23,10 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-in;
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-family: 5rem;
+    }
   }
   &--sub {
     display: block;
@@ -25,6 +34,9 @@ body {
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-in;
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -43,6 +55,15 @@ body {
 
   letter-spacing: 2px;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
+
   &:hover {
     transform: skewY(5deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
