--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* 
 BREAK POINTS
 0 - 600 px: - phone
@@ -155,12 +156,23 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero-small.jpg");
   background-size: cover;
   background-position: top;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative; }
+  position: relative;
+  /* 
+  » all we need to do is to write media queries to load different images for different situations
+  » one type of media query targets resolution (rather than screen width)
+  » 192 dots per inch is the resolution of the apple retina screen
+  » Phones also have high res screens so we can add a second condition that the sreen size must be over 600px (37.5em) for the large image to be applied
+  » If the screen is low-res but large (width 2000px+ / 125em+), then it also makes sense to apply the large image
+  » the comma in a media query functions as an or. 
+  */ }
+  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+    .header {
+      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg"); } }
   @media (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
