changing the background color and color of highlighted text using the ::selection pseudo-class in _base.scss. Changing the media query in _card.scss so it applies on landscape tablet layouts using (hover:none) to detect devices where hover is not available.

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -34,3 +34,9 @@ html {
   }
   // here we are passing the content 'font-size: 50%' into the mixin
 }
+
+// we can change the background color and color of highlighted text using the ::selectio pseudo-class
+::selection {
+  background-color: $color-primary;
+  color: $color-white;
+}
