--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -175,7 +175,8 @@
   //////////////MEDIA QUERY/////////////////
   ////////////////////////////////////////////////////////
 
-  @include respond(tab-port) {
+  // if screen is under 900px or where hover is not available, i.e. landscape tablets, apply this query.
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
     height: auto;
 
     background-color: $color-white;
