--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,14 +1,19 @@
 //COLORS
 //Greens
-$color-primary-light: #7ed56f;
-$color-primary: #55c57a;
-$color-primary-dark: #28b485;
+
+$color-primary-light: #2998ff;
+$color-primary: #406efd;
+$color-primary-dark: #5643fa;
 
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 
-$color-tertiary-light: #2998ff;
-$color-tertiary-dark: #5643fa;
+$color-tertiary-light: #7ed56f;
+$color-tertiary: #55c57a;
+$color-tertiary-dark: #28b485;
+
+$color-quaternary-light: #ff0000;
+$color-quaternary-dark: #bf0000;
 
 //Tones
 $color-grey-light-1: #f7f7f7;
