--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -31,8 +31,8 @@
       &-1 {
         background-image: linear-gradient(
           to right bottom,
-          $color-secondary-light,
-          $color-secondary-dark
+          $color-tertiary-light,
+          $color-tertiary-dark
         );
       }
       &-2 {
@@ -45,8 +45,8 @@
       &-3 {
         background-image: linear-gradient(
           to right bottom,
-          $color-tertiary-light,
-          $color-tertiary-dark
+          $color-secondary-light,
+          $color-secondary-dark
         );
       }
     }
@@ -68,10 +68,10 @@
     &--1 {
       background-image: linear-gradient(
           to right bottom,
-          $color-secondary-light,
-          $color-secondary-dark
+          $color-tertiary-light,
+          $color-tertiary-dark
         ),
-        url(../img/nat-5.jpg);
+        url(../img/london/london-eye-1.jpeg);
     }
     &--2 {
       background-image: linear-gradient(
@@ -79,15 +79,15 @@
           $color-primary-light,
           $color-primary-dark
         ),
-        url(../img/nat-6.jpg);
+        url(../img/london/big-ben-1.jpeg);
     }
     &--3 {
       background-image: linear-gradient(
           to right bottom,
-          $color-tertiary-light,
-          $color-tertiary-dark
+          $color-secondary-light,
+          $color-secondary-dark
         ),
-        url(../img/nat-7.jpg);
+        url(../img/london/london-theatre-1.jpeg);
     }
   }
   &__heading {
@@ -109,8 +109,8 @@
     &--1 {
       background-image: linear-gradient(
         to right bottom,
-        rgba($color-secondary-light, 0.8),
-        rgba($color-secondary-dark, 0.8)
+        rgba($color-tertiary-light, 0.8),
+        rgba($color-tertiary-dark, 0.8)
       );
     }
     &--2 {
@@ -123,8 +123,8 @@
     &--3 {
       background-image: linear-gradient(
         to right bottom,
-        rgba($color-tertiary-light, 0.8),
-        rgba($color-tertiary-dark, 0.8)
+        rgba($color-secondary-light, 0.8),
+        rgba($color-secondary-dark, 0.8)
       );
     }
   }
@@ -169,6 +169,9 @@
   &__price-value {
     font-size: 6rem;
     font-weight: 100;
+  }
+  &__price-adjunct {
+    font-size: 2rem;
   }
 
   /////////////////////////////////////////////////////////
