--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,7 +5,7 @@
       rgba($color-primary-light, 0.8),
       rgba($color-primary-dark, 0.8)
     ),
-    url("../img/hero-small.jpg");
+    url("../img/london/london-hero-2.jpeg");
   background-size: cover;
   background-position: top;
   position: relative;
@@ -47,7 +47,7 @@
     left: 4rem;
   }
   &__logo {
-    height: 3.5rem;
+    height: 10rem;
   }
   &__text-box {
     text-align: center;
