--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -15,7 +15,7 @@
       rgba($color-primary-light, 0.8),
       rgba($color-primary-dark, 0.8)
     ),
-    url("../img/nat-4.jpg");
+    url("../img/london/london-hero-3.jpeg");
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem;
@@ -63,7 +63,7 @@
       rgba($color-white, 0.9) 50%,
       transparent 50%
     ),
-    url(../img/nat-10.jpg);
+    url(../img/london/london-hero-1.jpeg);
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5 4rem rgba($color-black, 0.15);
