--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -63,7 +63,7 @@
       rgba($color-white, 0.9) 50%,
       transparent 50%
     ),
-    url(../img/london/london-hero-1.jpeg);
+    url("../img/London/london-hero-1.jpeg");
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5 4rem rgba($color-black, 0.15);
